# rpi-pr-tui

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: globals.rs  lib.rs  main.rs
src/cursive_methods/: mod.rs
src/pr_file_format/: mod.rs  player.rs
