[package]
name = "rpi_pr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["pancurses-backend"]
